# sing-box_with_xray

./: .gitignore  Cargo.toml  README.md  Restart.ps1  Stop.ps1  Update.ps1  build.rs  ci.ps1  settings.toml  sing-box.json
.github/workflows/: ci.yml
configs/: settings.toml  sing-box.json  xray.json
configs/sing-box/: sing-box_ipv4_only.json  sing-box_prefer_ipv4.json
configs/xray/: ALL[raw+vision+reality].json  ALL[xhttp+reality].json  ALL[xhttp+tls+cdn].json  UP[xhttp+reality]DL.json  UP[xhttp+reality]DL[xhttp+tls+cdn].json  UP[xhttp+tls+cdn]DL.json  UP[xhttp+tls+cdn]DL[xhttp+reality].json  olny_xray_上下行分离[xhttp+reality].json  olny_xray_上下行分离[xhttp+tls+cdn].json  olny_xray_上行[xhttp+reality]下行[xhttp+tls+cdn].json  olny_xray_上行[xhttp+tls+cdn]下行[xhttp+reality].json  with_sing-box_[xhttp+reality].json  with_sing-box_[xhttp+tls+cdn].json
src/: dns.rs  error.rs  main.rs  process.rs  scheduler.rs  settings.rs  state.rs  toast.rs  tray.rs  update.rs
templates/: ALL[raw+vision+reality].json  UP[xhttp+reality]DL.json  UP[xhttp+tls+cdn]DL.json  UP[xhttp+tls+cdn]DL[xhttp+reality].json
