[package]
name = "sing-box_with_xray"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
ureq = "2"
zip = "0.6"
windows = { version = "0.58", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
